refactor(product): 카테고리를 ecommerce_categories 로 단일화한다 (Phase 5)
상품이 카테고리에 붙는 경로가 두 개였다 - categories + products.category_id(1:N, 하드 삭제)와
ecommerce_categories + product_ecommerce_categories(M:N, slug, soft delete). 도메인도 두 벌이라
"이 상품의 카테고리" 를 묻는 곳마다 어느 쪽을 봐야 하는지가 달랐고, 관리 화면도 두 개였다.

레거시 분류를 트리로 이관하고(slug 는 한글 이름으로 ASCII slug 를 만들 수 없어 결정적인
'legacy-<id>' 사용, 이름은 그대로 보존) 대표 분류를 product_ecommerce_categories.is_primary 로
옮긴다. 부분 유니크 인덱스가 상품당 대표 1 행을 강제하므로, 컬럼을 따로 두어 매핑 테이블과
어긋날 여지를 남기지 않는다. 매핑은 있는데 대표가 없던 상품은 가장 먼저 붙은 분류를 대표로 삼는다.

제거: categories 테이블, products.category_id, 레거시 Category 도메인/포트/서비스/어댑터,
/api/categories 컨트롤러, 프론트 CategoryManagementPage 와 api/category.ts.
(사용자 확인: 이커머스 카테고리 관리 화면 하나만 남긴다)

상품 검색의 categoryId 필터는 매핑 테이블 EXISTS 로 재배선했고, 대표 분류는 조회 시 주입한다.
product 어댑터가 category 어댑터를 직접 읽으면 ArchUnit 이 막으므로(타 도메인 영속 계층 참조)
LoadPrimaryCategoryPort 를 두고 카테고리 쪽 어댑터가 구현한다. 목록 경로는 일괄 조회로 N+1 을 피한다.

effectDeps 회귀 테스트의 '마운트 1회형' 대표는 TagManagementPage 로 옮겼다(같은 패턴).

검증: :order-service:test 1534 통과(0 실패) / jacocoTestCoverageVerification 통과,
      menu-route-gate 6 통과, 프론트 effectDeps 2 통과, tsc --noEmit 0.
      ⚠️ 측정 함정: 세션 내 누적된 build/jacoco/test.exec 가 일부 패키지 0% 로 깨져 0.79 를
      보고했다. exec 삭제 후 재측정해야 실제 값이 나온다(clean 직후 첫 측정에서 재현).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>